public/stylesheets/base.css
html {
  background: #FFFAEF;
}
body {
  color: #333; 
  font-family: "Georgia", "serif";
  }

h1, h2, h3, h4 {
  font-family: "Trebuchet MS", arial,helvetica,clean,sans-serif;
  margin: 1em 0;
  }
  h1.title,   h2.title,   h3.title,   h4.title {
    margin-bottom: 0; }
  h1.first,   h2.first,   h3.first,   h4.first {
    margin-top: 0; }

h1 {
  font-size: 197%; }

h2 {
  font-size: 146%; }

h3 {
  font-size: 123.1%;
  margin: 1em 0 0.3em; }

h4 {
  font-size: 116%;
  margin: 0.3em 0;
  font-weight: normal; }
  h4.first {
    margin-top: 0.5em; }
    
abbr, acronym {
  border-bottom: 1px dotted #000;
  cursor: help; }

strong {
  font-weight: bold;
}

em {
  font-style: italic; }

blockquote, ul, ol {
  margin: 1em; }

blockquote {
  padding: 0.5em 40px;
  background: #F3F0DC url(/images/quote.gif) no-repeat 0.2em 0.2em;
  font-size: 108%;
  border-top: 1px solid #DFD0C3;
  border-bottom: 1px solid #DFD0C3;
  font-style: italic; 
  color: #4E3114;
  }
ol, ul {
  margin-left: 2em; }

ol li {
  list-style: decimal outside; }

ul li {
  list-style: disc outside; }

th, td {
  padding: 0.3em;
  vertical-align: middle;
  border-bottom: 1px solid #CFF0FF; }

thead {
  background: #CFF0FF; }

th {
  font-weight: bold;
  text-align: center; }

caption {
  margin-bottom: .5em;
  text-align: center; }

p, fieldset, table, pre {
  margin-bottom: 1em; }

p {
  line-height: 1.6em; }


input[type=text], input[type=password], textarea {
  width: 12.25em;
  *width: 11.9em; }

